examples/01-clean-code-arch-simple/src/domain/customer/errors/index.ts
export { InvalidCustomerIdError } from "./invalid-customer-id-error.js";
export { InvalidCustomerNameError } from "./invalid-customer-name-error.js";
export { InvalidCustomerEmailError } from "./invalid-customer-email-error.js";
